--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.4.0",
+    "swiper": "^11.0.6",
     "tailwindcss": "^3.4.1"
   }
 }
