--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
+    "@astrolib/seo": "^1.0.0-beta.5",
     "astro": "^4.4.0",
     "swiper": "^11.0.6",
     "tailwindcss": "^3.4.1"
